--- a/demo/less/dashboard.less
+++ b/demo/less/dashboard.less
@@ -54,10 +54,10 @@ form {
     margin-bottom: 0;
 }
 
-.gridster {
+.ez-gridster {
     border: 1px solid #ccc;
 }
 
-.gridster.gridster-mobile {
+.ez-gridster.gridster-mobile {
 	border: none;
 }
